@@ -1,22 +1,16 @@
-# Auto update temps
-*.old
-automake/
-libtool/
-
-# Dist directory
-build-aux-*
-
-# Autoconf build temp
-autom4te.cache
-
-# Vim swap
-*.swp
-
-# Configure files
-config.log
-config.status
-configure
-Makefile
-
-# CMake build temp
+# CMake build files
 build/
+
+# Patterns for all subdirectories: all kinds of automatic backup files.
+*.orig
+*.rej
+*~
+*.kate-swp
+*.swp
+.#*
+\#*#
+.vscode
+
+# Dist directory and temps
+build-aux-v*
+__pycache__
