@@ -1,0 +1,27 @@
+i18n-utils/lang/ru_RU.ilang.gm
+i18n-utils/lang/zh_TW.ilang.gm
+i18n-utils/lang/en_US.ilang.gm
+i18n-utils/lang/ja_JP.ilang.gm
+i18n-utils/lang/ko_KR.ilang.gm
+i18n-utils/lang/hi_IN.ilang.gm
+i18n-utils/lang/fr_FR.ilang.gm
+i18n-utils/lang/zh_CN.ilang.gm
+i18n-utils/lang/de_AT.ilang.gm
+i18n-utils/ilang.sh
+i18n-utils/getmsg.ps1
+i18n-utils/ilang.ps1
+i18n-utils/getmsg.sh
+i18n-utils/lang_file_format.txt
+cmake/cppp.cmake
+cmake/file.cmake
+cmake/library.cmake
+cmake/uninstall.cmake.in
+cmake/visibility.cmake
+cmake/cppp_init.cmake
+README.md
+COPYING
+cpppdist.py
+CMakeLists.txt
+CPPPPKG
+FILELIST
+ChangeLog
